--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "ci-cd2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "mocha ./tests/* --exit"
   },
   "repository": {
