--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,38 @@ jobs:
         npm run test
       env:
         CI: true
+
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Latest Repo
+        uses: actions/checkout@main
+
+      - name: Generate Deployment Package
+        run: zip -r deploy.zip * -x "**node_modules**"
+
+      - name: Get timestamp
+        uses: gerred/actions/current-time@main
+        id: current-time
+
+      - name: Run string replace
+        uses: frabert/replace-string-action@main
+        id: format-time
+        with:
+          pattern: '[:\.]+'
+          string: "${{ steps.current-time.outputs.time }}"
+          replace-with: '-'
+          flags: 'g'
+
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v14
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: docker-cicd
+          environment_name: Dockercicd-env
+          version_label: "docker-cicd-${{ steps.format-time.outputs.replaced }}"
+          region: eu-north-1
+          deployment_package: deploy.zip
