--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,13 +34,13 @@ jobs:
 
     steps:
       - name: Checkout Latest Repo
-        uses: actions/checkout@main
+        uses: actions/checkout@master
 
       - name: Generate Deployment Package
         run: zip -r deploy.zip * -x "**node_modules**"
 
       - name: Get timestamp
-        uses: gerred/actions/current-time@main
+        uses: gerred/actions/current-time@master
         id: current-time
 
       - name: Run string replace
