--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ci-cd2",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.ts",
   "scripts": {
-    "start": "node app.js",
-    "test": "mocha ./tests/* --exit"
+    "start": "npx ts-node src/app.ts",
+    "test": "mocha src/tests/* --exit"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/MaxSwipex/CI-CD#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
+    "@types/node": "^18.6.4",
     "mocha": "^10.0.0",
-    "supertest": "^6.2.4"
+    "supertest": "^6.2.4",
+    "typescript": "^4.7.4"
   }
 }
