--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.ts",
   "scripts": {
     "start": "npx ts-node src/app.ts",
-    "test": "mocha src/tests/* --exit"
+    "test": "mocha --require ts-node/register src/tests/* --exit"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
+    "@types/mocha": "^9.1.1",
     "@types/node": "^18.6.4",
     "mocha": "^10.0.0",
     "supertest": "^6.2.4",
