--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^18.6.4",
     "mocha": "^10.0.0",
     "supertest": "^6.2.4",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
