--- a/appspec.yml
+++ b/appspec.yml
@@ -2,4 +2,9 @@ version: 0.0
 os: linux
 files:
   - source: .
-    destination: /home/ec2-user/CI-CD
+    destination: /home/ec2-user/app
+hooks:
+  AfterInstall:
+    - location: scripts/install_app_dependencies
+      timeout: 300
+      runas: root
