--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         id: deploy
         run: |
           aws deploy create-deployment \
-            --application-nameCICD-Docker-depl \
+            --application-name CICD-Docker-depl \
             --deployment-group-name CICD-Docker-depl-group \
             --deployment-config-name CodeDeployDefault.OneAtATime \
             --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
