--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,6 @@ files:
     destination: /home/ec2-user/app
 hooks:
   AfterInstall:
-    - location: scripts/install_app_dependencies
+    - location: scripts/install_app_dependencies.sh
       timeout: 300
       runas: root
